# ollama_deep_research

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/ollama_deep_researcher/: configuration.py  graph.py  utils.py
