[tool.poetry]
name = "ollama-deep-researcher"
version = "0.0.1"
description = "Fully local web research and summarization assistant with Ollama and LangGraph."
authors = ["Hassan Ali <hassan@hassanali.dev>"]
readme = "README.md"
license = "MIT"
packages = [{include = "ollama_deep_researcher", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
langgraph = ">=0.2.55"
langchain-community = ">=0.3.9"
tavily-python = ">=0.5.0"
langchain-ollama = ">=0.2.1"
duckduckgo-search = ">=7.3.0"
langchain-openai = ">=0.1.1"
openai = ">=1.12.0"
httpx = ">=0.28.1"
markdownify = ">=0.11.0"
python-dotenv = "1.0.1"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.11.1"
ruff = ">=0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"